// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Progress /> renders progress bar 1`] = `
<div>
  <div
    class="sc-bcXHqe cTQEzR"
  />
</div>
`;

exports[`<Progress /> renders secondary progress secondary 1`] = `
<div>
  <div
    class="sc-bcXHqe eLHtPq"
  />
</div>
`;
